feat: add nickname only mode for review word api
